Refactor database connection logic and enhance registration form error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/components/Img.jsx",
-    "app/components/Img.jsx"
+    "app/components/Img.jsx",
+    "app/database/dbConnect.js"
   ],
   "exclude": ["node_modules"]
 }
