Add Chatbot component and integrate AI text generation; update dependencies and metadata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/components/Img.jsx",
-    "app/components/Img.jsx",
-    "app/database/dbConnect.js"
+    "app/components/Chatbot.tsx",
+    "app/database/dbConnect.js",
+    "app/database/handlers/generateText.js"
   ],
   "exclude": ["node_modules"]
 }
