--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.6.1",
     "@radix-ui/react-slot": "^1.1.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
     "mongoose": "^8.12.1",
-    "next": "15.2.2",
+    "next": "^15.2.4",
     "next-auth": "^4.24.11",
+    "nextjs-simple-typewriter": "^5.2.2",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
